WIP - solve below 2.5 Center image and add margin/ padding around, round the image 2.6 Left align children 2.7 Fix info-section-1 2.8 Fix info-section-2 2.9 Center the card 2.10 Fix flex child elements moving outside boundary 2.11 Fixed size for flexbox-container ( Google "fix size for flexbox container") 2.12 Centre image ( Google "how to center image in css" ) 2.13 Fix Avatar image and name 2.14 Add small images 2.15 Add background colors 2.16 Draw horizontal line

--- a/style.css
+++ b/style.css
@@ -20,47 +20,87 @@ body {
   flex-direction: column;
 }
 
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  /* border: 2px solid blueviolet; */
+}
+
 .card {
-  /* height: 100%; */
-  width: 20%;
+  height: 85%;
+  width: 25%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border: 2px solid red;
+}
+
+/* Child 1 */
+.equilibrium-image-container {
+  width: 100%;
+  height: 90%;
+  /* border: 2px solid goldenrod; */
   margin: auto;
 }
 
-img {
+.equilibrium-image-container img {
+  /* width: 100%;
+  margin: 0.5em; */
   width: 100%;
-  margin: 0.5em;
+  height: 100%;
+  padding: 15px;
+  margin: auto;
+  border-radius: 35px;
 }
 
+/* Child 2 */
 .info-section {
   margin: 20px auto;
+  padding: 15px;
+  /* border: 2px solid goldenrod; */
+}
+
+.info-section-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .info-section-2 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin: 10px auto;
   gap: 32px;
 }
 
+/* Child 3 */
 .avatar-image-and-name {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 50px;
-  border: 2px solid green;
+  /* height: 50px; */
+  /* border: 2px solid green; */
   gap: 32px;
+  margin: 20px auto;
+  padding: 15px;
+  /* border: 2px solid goldenrod; */
 }
 
-.avatar-image {
+.avatar-image-container {
   width: 20px;
   height: 20px;
+  /* margin: 20px auto;
+  padding: 15px; */
 }
 
-.avatar-image img {
+.avatar-image-container img {
   width: 100%;
   height: 100%;
   margin: auto;
